fix: bind tenant context in depreciation scheduler